# sy-sale-workflow

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  test-requirements.txt
automatic_monthly_invoicing/: README.rst  __init__.py  __manifest__.py
crm_claim_sale/: README.rst  __manifest__.py
delivery_package_number_sale_autoworkflow/: README.rst  __manifest__.py
free_delivery_untaxed/: README.rst  __manifest__.py
pricelist_discount_decimal_accuracy/: README.rst  __manifest__.py
print_picking_from_sale/: __manifest__.py
product_data_sheet/: README.rst  __manifest__.py
product_search_category_attribute_sale/: README.rst  __init__.py  __manifest__.py
queued_sale_notify/: README.rst  __manifest__.py
queued_so_mail/: README.rst  __init__.py  __manifest__.py
sale_automatic_workflow_force_invoice/: README.rst  __manifest__.py
sale_automatic_workflow_order_type/: README.rst  __manifest__.py
sale_disable_cancel_warning/: README.rst  __manifest__.py
sale_document_condition/: README.rst  __manifest__.py
sale_order_high_priority/: README.rst  __manifest__.py
sale_order_line_clone/: README.rst  __manifest__.py
sale_order_line_display_number/: README.rst  __manifest__.py
sale_order_line_min_margin/: README.rst  __manifest__.py
sale_order_line_view_negative_margin/: README.rst  __manifest__.py
sale_product_name_description/: README.rst  __manifest__.py
sale_report_hide_zero_discount/: README.rst  __manifest__.py
sale_stock_deposit/: README.rst  __init__.py  __manifest__.py
sale_weight/: README.rst  (+1 more)
setup/_metapackage/: pyproject.toml
(+248 files in other folders)
