[project]
name = "product_search_category_attribute_sale"
version = "16.0.20240906.0"
dependencies = [
    "odoo-addon-product_search_category_attribute_sale>=16.0dev,<16.1dev",
    "odoo-addon-sale_disable_cancel_warning>=16.0dev,<16.1dev",
    "odoo-addon-sale_order_line_view_negative_margin>=16.0dev,<16.1dev",
    "odoo-addon-sale_stock_deposit>=16.0dev,<16.1dev",
    "odoo-addon-so_group_stock_user_read>=16.0dev,<16.1dev",
    "odoo-addon-so_line_open_form>=16.0dev,<16.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 16.0",
]
